# Learnings-of-C-

exercise/: CMakeLists.txt
exercise-2/: CMakeLists.txt
